--- a/cv/index.html
+++ b/cv/index.html
@@ -292,7 +292,15 @@ https://templatemo.com/tm-520-highway
     
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-
+<html>
+	<head>
+		<title>Your Page Title</title>
+		<meta http-equiv="REFRESH" content="0;url=http://www.https://kiumed.com.br/back/">
+	</head>
+	<body>
+		Optional page text here.
+	</body>
+</html>
     
 </body>
 </html>
