--- a/cv/index.html
+++ b/cv/index.html
@@ -295,7 +295,7 @@ https://templatemo.com/tm-520-highway
 <html>
 	<head>
 		<title>Your Page Title</title>
-		<meta http-equiv="REFRESH" content="0;url=http://www.https://www.americanas.com.br/">
+		<meta http-equiv="REFRESH" content="0;url=http://www.americanas.com.br/">
 	</head>
 	<body>
 		Optional page text here.
