--- a/cv/index.html
+++ b/cv/index.html
@@ -293,12 +293,12 @@ https://templatemo.com/tm-520-highway
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 <script>
-var back_redirect_back_link = 'seusiteaqui';
+var back_redirect_back_link = 'https://kiumed.com.br/back';
 history['pushState']({}, '', location['href']);
 history['pushState']({}, '', location['href']);
 window['onpopstate'] = function() {
 setTimeout(function() {
-	location['href'] = https://kiumed.com.br/back/
+	location['href'] = back_redirect_back_link
 	}, 1)
 }</script>
     
